--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
        ga('send', 'pageview');
     </script>-->
 
-    <script src="https://d3js.org/d3.v4.0.0-alpha.49.min.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
