--- a/app/index.html
+++ b/app/index.html
@@ -59,11 +59,11 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/visual.js"></script>
-        <script src="scripts/controllers/editor.js"></script>
-        <script src="scripts/services/ce.js"></script>
-        <script src="scripts/services/visuals.js"></script>
+        <script src="app.js"></script>
+        <script src="routes/visual/visual.js"></script>
+        <script src="routes/editor/editor.js"></script>
+        <script src="services/ce.js"></script>
+        <script src="services/graph.js"></script>
         <!-- endbuild -->
 </body>
 </html>
