--- a/app/routes/editor/editor.html
+++ b/app/routes/editor/editor.html
@@ -9,12 +9,19 @@
 <!-- <span class="validation" ng-class="valid ? 'text-success' : 'text-failure'">{{ validationText }}</span> -->
 
 <div class="footer">
-  <div class="edit-buttons">
-    <button class="btn" ng-click="update()" ng-disabled="!valid">Update</button>
-    <button class="btn" ng-click="clear()">Clear</button>
-    <!-- <button class="btn" ng-click="skip()">Skip Tutorial</button> -->
-    <!-- <button class="btn" ng-click="restart()">Restart</button> -->
-    <button class="btn" ng-click="export()">Export</button>
+  <div class="buttons">
+    <div class="tutorial-buttons">
+      <button ng-show="writing" class="btn" ng-click="skip()">Skip Tutorial</button>
+      <button ng-show="!writing" class="btn" ng-click="restart()">Restart Tutorial</button>
+    </div>
+
+    <span class="vertical-divider"></span>
+
+    <div class="edit-buttons">
+      <button class="btn" ng-click="update()" ng-disabled="!valid">Update</button>
+      <button class="btn" ng-click="clear()">Clear</button>
+      <button class="btn" ng-click="export()">Export</button>
+    </div>
   </div>
   <div class="store">
     <span>Connected to CE-Store</span> <input></input> <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
