--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,7 @@
     <script src="services/ce.js"></script>
     <script src="services/graph.js"></script>
     <script src="services/config.service.js"></script>
+    <script src="services/tutorial/tutorial.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
