--- a/app/routes/visual/visual.html
+++ b/app/routes/visual/visual.html
@@ -1,1 +1,7 @@
 <svg id="visual" class="visual-svg"></svg>
+
+<div class="externalLinks">
+  <a href="https://github.com/ce-store/ce-store/wiki/Cheatsheet">Cheatsheet</a>
+  <a href="https://github.com/ce-store/ce-store">CE-Store</a>
+  <a href="https://github.com/annaet/ce-editor">Get the code</a>
+</div>
