--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,7 @@
     <script src="routes/visual/visual.js"></script>
     <script src="routes/editor/editor.js"></script>
     <script src="routes/settings/settings.controller.js"></script>
+    <script src="routes/confirm/confirm.controller.js"></script>
 
     <script src="directives/elastic/elastic.directive.js"></script>
     <script src="directives/lesson/lesson.directive.js"></script>
