--- a/app/routes/editor/editor.html
+++ b/app/routes/editor/editor.html
@@ -13,10 +13,8 @@
       <button class="btn" ng-click="skipTutorial()">Skip Tutorial</button>
     </div>
 
-    <!-- <span class="vertical-divider"></span> -->
-
     <div ng-show="!showTutorial" class="edit-buttons">
-      <button class="btn" ng-click="update()" ng-disabled="!valid">Update</button>
+      <button class="btn" ng-click="resetTutorial()">Reset Tutorial</button>
       <button class="btn" ng-click="clear()">Clear</button>
       <button class="btn" ng-click="export()">Export</button>
     </div>
