--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="less/styles/mixins.css">
     <link rel="stylesheet" href="less/styles/common.css">
 
+    <link rel="stylesheet" href="less/directives/ce-header/ce-header.css">
     <link rel="stylesheet" href="less/directives/ce-editor/ce-editor.css">
     <link rel="stylesheet" href="less/directives/ce-visualisation/ce-visualisation.css">
     <link rel="stylesheet" href="less/routes/playground/playground.css">
@@ -93,6 +94,7 @@
     <script src="routes/settings/settings.controller.js"></script>
     <script src="routes/confirm/confirm.controller.js"></script>
 
+    <script src="directives/ce-header/ce-header.directive.js"></script>
     <script src="directives/ce-editor/ce-editor.directive.js"></script>
     <script src="directives/ce-visualisation/ce-visualisation.directive.js"></script>
     <script src="directives/elastic/elastic.directive.js"></script>
