--- a/app/routes/playground/playground.html
+++ b/app/routes/playground/playground.html
@@ -1,6 +1,7 @@
 <div class="ce-playground">
-  <ce-editor ce="ce"></ce-editor>
+  <ce-header></ce-header>
+  <ce-editor ce="ce" status="status"></ce-editor>
   <div class="ce-interface">
-    <ce-visualisation ce="ce"></ce-visualisation>
+    <ce-visualisation ce="ce" status="status"></ce-visualisation>
   </div>
 </div>
